2006-03-16  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* gdk/*.c
	* gdk-pixbuf/*.c
	* gtk/*.c: Canonicalize all property descriptions and use the static
	flag to avoid extra (~37K worth) allocations.

2006-03-14  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtktreeview.c (gtk_tree_view_button_press): Be more
	careful about initializing cell_area.
	N#20679

2006-03-07  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkimmulticontext.c (get_global_context_id): Don't leak the
	result from _gtk_im_module_get_default_context_id() (which is wrongly
	declared as 'const')
	N#23240

2006-03-07  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkselection.c (gtk_selection_data_set_uris): Don't
	leak result.
	N#21336

2006-03-07  Tommi Komulainen  <tommi.komulainen@nokia.com>

	Merge from GNOME CVS. N#21857

    2005-12-09  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkselection.c (gtk_selection_data_get_uris): Don't
	leak list[0].  (#323629, Markku Vire)

2006-03-07  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtktoolbutton (gtk_tool_button_construct_contents): If the
	toolbar mode is ICONS and there is no icon set then show the label,
	and vice versa (#322019)
	M#353, N#23669

2006-03-07  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkcheckbutton.c
	* gtk/gtkdialog.c
	* gtk/gtkentry.c
	* gtk/gtkrange.c
	* gtk/gtktextbuffer.c
	* gtk/gtktextview.c
	* gtk/gtkwidget.c: Silence compiler warnings.

2006-03-06  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	Merge from GNOME CVS.

    2005-05-03  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtk.symbols:
	* gtk/gtkdialog.h:
	* gtk/gtkdialog.c (gtk_dialog_get_response_for_widget):
	Make this function public.  (#170748, Morten Welinder)

2006-03-06  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gdk/gdkproperty.h (gdk_atom_intern_static_string):
	* gtk/gtkintl.h (I_(string)): Provide source compatible versions as
	macros to reduce porting effort.
